# fiance

./: .gitignore  README.md  _test_fee_contexts.txt  _test_fee_rates.txt  _test_pdf_text.txt  _test_rxxh_fees.txt  _test_rxxh_text.txt  analyze_citic.py  auto_resume_task.bat  auto_resume_task.py  backtest_bridge.py  backtest_pattern.py  backtest_pattern_v2.py  backtest_pattern_v3.py  backtest_pattern_v3_2.py  backtest_pattern_v3_3.py  backtest_pattern_v3_4.py  backtest_pattern_v4.py  backtest_v5.py  backtest_v6.py  backtest_v7_alpha.py  bank_crawler.py  bank_product_analyse.py  bank_product_strategy_final.py  bank_product_strategy_fixed.py  bank_product_strategy_optimized.py  bank_product_strategy_v5.py  bank_product_strategy_v6.py  bank_status.txt  batch_parse_pdf_fees.py  calculate_annual_return.py  ceb_crawler.py  ceb_crawler_parallel.py  ceb_crawler_v2.py  ceb_eportal.html  ceb_product_query.html  ceb_products.html  ceb_products_real.html  ceb_selenium.html  cebwm_api_finder.py  (+208 more)
aifinance_lib/: database.py  migrate_data.py  verify_migration.py
aifinance_lib/strategy/: data_loader.py
config/: pipeline_config.yaml
google/: database.py  migrate_data.py
pdfs/华夏/: 华夏理财悦享三年期理财产品1号说明书    2023-02-28.docx  华夏理财悦享两年期理财产品2号说明书    2023-02-28.docx  华夏理财权益打新一年定开理财产品1号说明书    22年05月06日.docx  华夏理财权益打新周期360天理财产品A款说明书          22年09月27日.docx  (+15 more)
scripts/: dump_to_qlib.py  migrate_v10_to_v11.py  run_backtest.py  run_pipeline.py
templates/: index-v2.html  index.html
tests/: __init__.py  test_factors.py  test_models.py  test_portfolio.py  test_unsmoothing.py
(+32 files in other folders)
