[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aifinance"
version = "11.0.0"
description = "Bank Wealth Management Product Selection & Release Strategy"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.21",
    "pandas>=1.4",
    "torch>=2.0",
    "lightgbm>=3.3",
    "neuralforecast>=1.6",
    "riskfolio-lib>=4.0",
    "pyarrow>=10.0",
    "scipy>=1.9",
    "scikit-learn>=1.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "black", "ruff"]
qlib = ["qlib>=0.9"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311']

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
